<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>SparkJunit</groupId>
  <artifactId>SparkJunit</artifactId>
  <version>0.0.1-SNAPSHOT</version>
<properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <scala.version>2.10.5</scala.version>
    <scala.binary.version>2.10</scala.binary.version>
    <jline.version>${scala.version}</jline.version>
    <jline.groupid>org.scala-lang</jline.groupid>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.apache.spark</groupId>
      <artifactId>spark-core_${scala.binary.version}</artifactId>
      <version>1.6.0-cdh5.7.3</version>
      <scope>provided</scope>
    </dependency>
        <dependency>
      <groupId>org.apache.spark</groupId>
      <artifactId>spark-sql_${scala.binary.version}</artifactId>
      <version>1.6.0-cdh5.7.3</version>
      <scope>provided</scope>
    </dependency>
	<dependency>
		<groupId>org.apache.spark</groupId>
		<artifactId>spark-hive_${scala.binary.version}</artifactId>
		<version>1.6.0-cdh5.7.3</version>
		<scope>provided</scope>
	</dependency>
	<dependency>
		<groupId>org.apache.spark</groupId>
		<artifactId>spark-streaming_${scala.binary.version}</artifactId>
		<version>1.6.0-cdh5.7.3</version>
	</dependency>
	<dependency>
		<groupId>org.apache.hbase</groupId>
		<artifactId>hbase-spark</artifactId>
		<version>1.2.0-cdh5.7.3</version>
	</dependency>
	<dependency>
		<groupId>org.apache.hbase</groupId>
		<artifactId>hbase-server</artifactId>
		<version>1.2.0-cdh5.7.3</version>
		<scope>provided</scope>
	</dependency>
		<dependency>
		<groupId>org.apache.hbase</groupId>
		<artifactId>hbase-common</artifactId>
		<version>1.2.0-cdh5.7.3</version>
		<scope>provided</scope>
	</dependency>
	<dependency>
		<groupId>org.apache.hbase</groupId>
		<artifactId>hbase-client</artifactId>
		<version>1.2.0-cdh5.7.3</version>
		<scope>provided</scope>
	</dependency>
	<dependency>
		<groupId>commons-io</groupId>
		<artifactId>commons-io</artifactId>
		<version>2.5</version>
	</dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
	
	<dependency>  
	    <groupId>jdk.tools</groupId>  
	    <artifactId>jdk.tools</artifactId>  
	    <version>1.7</version>  
	    <scope>system</scope>  
	    <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>  
	</dependency> 

	<dependency>
        <groupId>org.apache.hbase</groupId>
        <artifactId>hbase-server</artifactId>
        <version>1.2.0-cdh5.7.3</version>
        <scope>test</scope>
        <type>test-jar</type>
    </dependency>
    <dependency>
        <groupId>org.apache.hbase</groupId>
        <artifactId>hbase-hadoop-compat</artifactId>
        <version>1.2.0-cdh5.7.3</version>
        <scope>test</scope>
        <type>test-jar</type>
    </dependency>
    <dependency>
        <groupId>org.apache.hbase</groupId>
        <artifactId>hbase-hadoop2-compat</artifactId>
        <version>1.2.0-cdh5.7.3</version>
        <scope>test</scope>
        <type>test-jar</type>
    </dependency>
    <dependency>
	      <groupId>org.apache.hbase</groupId>
	      <artifactId>hbase-common</artifactId>
	      <version>1.2.0-cdh5.7.3</version>
	      <type>test-jar</type>
	      <scope>test</scope>
    </dependency>
	<dependency>
	      <groupId>org.apache.hbase</groupId>
	      <artifactId>hbase-annotations</artifactId>
	      <version>1.2.0-cdh5.7.3</version>
	      <type>test-jar</type>
	      <scope>test</scope>
    </dependency>
    <dependency>
		<groupId>org.apache.hbase</groupId>
		<artifactId>hbase-protocol</artifactId>
		<version>1.2.0-cdh5.7.3</version>
		<scope>test</scope>
    </dependency>
	<dependency>
      <groupId>org.apache.spark</groupId>
      <artifactId>spark-sql_${scala.binary.version}</artifactId>
      <version>1.6.0-cdh5.7.3</version>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>
	<dependency>
		<groupId>org.apache.spark</groupId>
		<artifactId>spark-hive_${scala.binary.version}</artifactId>
        <version>1.6.0-cdh5.7.3</version>
        <type>test-jar</type>
        <scope>test</scope>
	</dependency>
	
  	<dependency>
	    <groupId>org.apache.commons</groupId>
	    <artifactId>commons-pool2</artifactId>
	    <version>2.2</version>
	</dependency>
	<dependency>
	    <groupId>commons-logging</groupId>
	    <artifactId>commons-logging</artifactId>
	    <version>1.1.1</version>
	</dependency>
	<dependency>
	    <groupId>commons-discovery</groupId>
	    <artifactId>commons-discovery</artifactId>
	    <version>0.4</version>
	</dependency>
  </dependencies>

	<repositories>
		<repository>
			<id>cloudera-http</id>
			<url>http://repository.cloudera.com/artifactory/cloudera-repos/</url>
		</repository>
	</repositories>

  <build>
	<resources>
	</resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.3</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
        </configuration>
      </plugin>
            
    <plugin>
      <!-- Build an executable JAR -->
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-jar-plugin</artifactId>
      <version>2.4</version>
    </plugin>
    <plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-surefire-plugin</artifactId>
		<version>2.18</version>
		<configuration>
			<argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
		</configuration>
	</plugin>
    </plugins>
  </build>
</project>